--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
     "@sjc5/remix-hooks": "^1.0.0",
     "just-debounce-it": "^3.2.0",
     "nprogress": "^0.2.0"
+  },
+  "peerDependencies": {
+    "@remix-run/react": ">=1.14.0",
+    "react": ">=16.8"
   }
 }
